# OOP_MAI_2025

./: CMakeLists.txt  README.md  readme.txt
task_1/: CMakeLists.txt
task_1/src/: task_1.cpp
task_1/tests/: tests.cpp
task_2/: CMakeLists.txt
task_2/include/: array.h  eleven.cpp  eleven.h
task_2/src/: array.cpp  eleven.cpp  main.cpp
task_2/tests/: tests.cpp
